# csad2425ki404popovmy16

./: Doxyfile  README.md  buildAll.bat
.github/workflows/: ci.yml
RPS-client/: CMakeLists.txt  build.bat  config.xml  mainwindow.cpp  mainwindow.h  mainwindow.ui
RPS-client/UT-tests/: CMakeLists.txt  UT-app-tester.cpp  UT-connection-tester.cpp  runTests.bat  test_actions.cpp  test_choice.cpp  test_mainwindow.cpp  test_result.cpp
RPS-client/forms/: actions.ui  choice.ui  mainwindow.ui  result.ui
RPS-client/img/: imgs.qrc
RPS-client/inc/: actions.h  choice.h  mainwindow.h  result.h
RPS-client/src/: actions.cpp  choice.cpp  mainwindow.cpp  result.cpp
RPS-server/: platformio.ini
RPS-server/ai/: main.py
RPS-server/src/: main.cpp
doc/html/: _r_p_s-client_2src_2main_8cpp.html  _r_p_s-client_2src_2main_8cpp.js  _r_p_s-server_2src_2main_8cpp.html  _r_p_s-server_2src_2main_8cpp.js  actions_8cpp.html  actions_8h.html  actions_8h.js  actions_8h_source.html  annotated.html  annotated_dup.js  choice_8cpp.html  choice_8h.html  choice_8h.js  choice_8h_source.html  class_actions-members.html  class_actions.html  class_actions.js  class_choice-members.html  class_choice.html  class_choice.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_result-members.html  class_result.html  class_result.js  classes.html  dir_429890ca628932a760b5dde562a70594.html  dir_429890ca628932a760b5dde562a70594.js  dir_62b5dbcc01779e46babf99d4ac846091.html  dir_62b5dbcc01779e46babf99d4ac846091.js  dir_69762c749391fc74c738131531acad1a.html  dir_69762c749391fc74c738131531acad1a.js  dir_867d713debc8d6790a14dae5cf87f2bb.html  dir_867d713debc8d6790a14dae5cf87f2bb.js  dir_efff7c1b6a0a30390c48c9f2041ef810.html  dir_efff7c1b6a0a30390c48c9f2041ef810.js  doxygen_crawl.html  files.html  files_dup.js  (+21 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
